--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,7 +10,7 @@
         "backgroundColor": "#F6F6F6",
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#F6F6F6",
-        "navigationBarTitleText": "啤酒鸡",
+        "navigationBarTitleText": "千人吃鸡",
         "navigationBarTextStyle": "black"
     },
     "sitemapLocation": "sitemap.json",
