--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -23,7 +23,7 @@
         "navigationBarBackgroundColor": "#39b54a",
         "navigationStyle": "custom",
         "navigationBarTextStyle": "black",
-        "navigationBarTitleText": "千人吃鸡"
+        "navigationBarTitleText": "慧管店"
     },
     "usingComponents": {
         "cu-custom": "/colorui/components/cu-custom"
