--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -19,7 +19,8 @@
         "pages/map/index",
         "pages/manage/tables/index",
         "pages/manage/tables-edit/index",
-        "pages/user-center/setting/index"
+        "pages/user-center/setting/index",
+        "pages/user-center/bill/index"
     ],
     "window": {
         "navigationBarBackgroundColor": "#39b54a",
