--- a/project.config.json
+++ b/project.config.json
@@ -72,5 +72,6 @@
     "editorSetting": {
         "tabIndent": "insertSpaces",
         "tabSize": 4
-    }
+    },
+    "simulatorPluginLibVersion": {}
 }
