--- a/project.private.config.json
+++ b/project.private.config.json
@@ -7,22 +7,24 @@
         "miniprogram": {
             "list": [
                 {
-                    "name": "首页-快速开始",
+                    "name": "支出管理",
+                    "pathName": "pages/shop-manage/spend-management/index",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "运营管理",
                     "pathName": "pages/manage/operation/index",
                     "query": "",
                     "launchMode": "default",
                     "scene": null
                 },
                 {
-                    "name": "商品列表",
-                    "pathName": "pages/goods-list/index",
+                    "name": "大转盘示例",
+                    "pathName": "pages/lucky/index",
                     "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "云开发示例",
-                    "pathName": "pages/examples/index",
-                    "query": "",
+                    "launchMode": "default",
                     "scene": null
                 },
                 {
@@ -36,5 +38,5 @@
     },
     "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
     "projectname": "beer-chicken",
-    "libVersion": "3.3.5"
+    "libVersion": "3.4.6"
 }
