--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -22,7 +22,8 @@
         "pages/user-center/bill/detail",
         "pages/lucky/index",
         "pages/shop-manage/spend-management/index",
-        "pages/shop-manage/spend-management-edit/index"
+        "pages/shop-manage/spend-management-edit/index",
+        "pages/application/edit"
     ],
     "window": {
         "navigationBarBackgroundColor": "#FD6C55",
