--- a/cloudfunctions/quickstartFunctions/config.json
+++ b/cloudfunctions/quickstartFunctions/config.json
@@ -1,7 +1,8 @@
 {
-  "permissions": {
-    "openapi": [
-      "wxacode.get"
-    ]
-  }
+    "permissions": {
+        "openapi": [
+            "wxacode.get",
+            "updatableMessage.createActivityId"
+        ]
+    }
 }
